created ground plane, something seems off about the textures

--- a/assignments/assignment2/CMakeLists.txt
+++ b/assignments/assignment2/CMakeLists.txt
@@ -15,9 +15,9 @@ ${CMAKE_CURRENT_SOURCE_DIR}/assets/
 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/assets/)
 
 install(FILES ${ASSIGNMENT2_INC} DESTINATION include/ASSIGNMENT2)
-add_executable(ASSIGNMENT2 ${ASSIGNMENT2_SRC} ${ASSIGNMENT2_INC})
-target_link_libraries(ASSIGNMENT2 PUBLIC core IMGUI assimp)
-target_include_directories(ASSIGNMENT2 PUBLIC ${CORE_INC_DIR} ${stb_INCLUDE_DIR})
+add_executable(assignment2 ${ASSIGNMENT2_SRC} ${ASSIGNMENT2_INC})
+target_link_libraries(assignment2 PUBLIC core IMGUI assimp)
+target_include_directories(assignment2 PUBLIC ${CORE_INC_DIR} ${stb_INCLUDE_DIR})
 
 #Trigger asset copy when ASSIGNMENT2 is built
-add_dependencies(ASSIGNMENT2 copyAssetsA2)
+add_dependencies(assignment2 copyAssetsA2)
